@@ -9,9 +9,12 @@
     - pictures timeline on profiles
     - pick where the local trends are
     - user's favorites on profiles
+    - picture searching
 
 - Bugs:
     - some people cant see profiles correctly
+    - time on retweets
+    - accessibility stuff
 
 - Notification Center:
     - Combined pictures from Evolve
@@ -20,3 +23,4 @@
 
     -- share button on expansion
     -- search by real name or screenname
+    -- pull to refresh on search and lists
